# st_crm_helper

./: README.md  license.txt  pyproject.toml
st_crm_helper/: hooks.py  hooks_utils.py  modules.txt  patches.txt
st_crm_helper/api/: dashboard.py  department.py
st_crm_helper/config/: desktop.py
st_crm_helper/crm_department/doctype/crm_department/: crm_department.json  crm_department.py
st_crm_helper/crm_department/doctype/crm_department_user/: crm_department_user.json  crm_department_user.py
st_crm_helper/fixtures/: custom_field.json
st_crm_helper/overrides/: department_filter.py
st_crm_helper/public/frontend/: index.html
st_crm_helper/public/js/: build.json  crm_dashboard_dept.js  crm_form_guard.js  crm_list_filter.js  department_filter.js
st_crm_helper/www/: crm.py
