[project]
name = "st_crm_helper"
version = "0.1.0"
description = "StandardTouch CRM Helper — Department-based access control for Frappe CRM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "StandardTouch e-Solutions", email = "info@standardtouch.com" }
]
dependencies = []

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "st_crm_helper"
